attempt to center login form

--- a/paktmonitor/templates/index.html
+++ b/paktmonitor/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <form id="login" action="/api/login" method="post">
+    <form id="login" class="center" action="/api/login" method="post">
         <label for="username">Username:</label>
         <input type="text" placeholder="Username"><br><br>
         <label for="password">Password: </label>
