--- a/paktmonitor/static/css/main.css
+++ b/paktmonitor/static/css/main.css
@@ -1,7 +1,11 @@
-.center {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -50px;
-  margin-left: -100px;
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+
+body {
+  font-family: 'Ubuntu', sans-serif;
+}
+
+#login {
+  width: 50%;
+  margin: auto;
+  padding-top: 15%;
 }
