--- a/paktmonitor/templates/base.html
+++ b/paktmonitor/templates/base.html
@@ -1,7 +1,11 @@
+<!doctype html>
 <html>
     <head>
         <title>PaktMonitor</title>
         <link href="../static/css/main.css" type="text/css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>    
     </head>
     <body>
         {% block body %}
