--- a/paktmonitor/templates/base.html
+++ b/paktmonitor/templates/base.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>PaktMonitor</title>
-        <link href="../static/css/main.css" type="text/css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+        <link href="../static/css/main.css" type="text/css" rel="stylesheet">
+        <link rel="shortcut icon" href="../static/favicon.ico">
     <body>
         {% block body %}
 
