--- a/paktmonitor/templates/index.html
+++ b/paktmonitor/templates/index.html
@@ -4,11 +4,11 @@
     <form id="login" action="/api/login" method="post">
         <div class="form-group">
             <label for="username">Username:</label>
-            <input type="text" class="form-control" placeholder="Username" required>
+            <input type="text" class="form-control" id="username" placeholder="Username" required>
         </div><br>
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" class="form-control" placeholder="Password" required>
+            <input type="password" id="password" class="form-control" placeholder="Password" required>
         </div><br>
         <div class="col text-center">
             <button type="submit" class="btn btn-primary">Submit</button>
